bad/int_negation_of_bool.example_compiler_output
ERROR
[1mbad/int_negation_of_bool.lat:4:2: [1;31merror: [0;1mcannot negate value of non-integer type `boolean`[m
	-x;
	[1;32m^[m
